fix mobile spacing on hero

--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -103,6 +103,10 @@ a:focus {
 .section {
   margin-top: 100px;
   margin-bottom: 40px;
+
+  @media (max-width: 768px) {
+    margin-top: 40px;
+  }
 }
 
 .hero {
